--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.98.0",
+    "@aws-sdk/client-lambda": "^3.13.0",
     "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
+    "@types/node": "14.14.41",
     "aws-cdk": "1.98.0",
+    "jest": "^26.4.2",
+    "line-ojichat-webhook-bundle": "file:bundle",
+    "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "~4.2.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.98.0",
+    "@aws-cdk/aws-lambda": "^1.98.0",
+    "@aws-cdk/aws-logs": "^1.98.0",
+    "@aws-cdk/aws-secretsmanager": "^1.98.0",
     "@aws-cdk/core": "1.98.0",
     "source-map-support": "^0.5.16"
   }
